hero research handleClick

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -67,6 +67,7 @@
   "university": "University",
   "semester": "Semester",
   "instructor": "Instructor(s)",
+  "funding": "Funding: ",
   "menu": [
     {
       "name": "Research",
