--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -67,6 +67,7 @@
   "university": "Université",
   "semester": "Session",
   "instructor": "Instructeur·rice·s",
+  "funding": "Financement : ",
   "menu": [
     {
       "name": "Recherche",
