--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -11,7 +11,7 @@
   "fall": "Fall",
   "winter": "Winter",
   "allProjects": "All projects",
-  "allItems": "All items",
+  "allItems": "All news",
   "publicationTypes": "Publication types",
   "projectTypes": "Project types",
   "researchArticles": "Research articles",
