--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -94,6 +94,10 @@
     {
       "name": "Contact",
       "path": "/contact"
+    },
+    {
+      "name": "Privacy Policy",
+      "path": "/privacy-policy"
     }
   ],
   "publicationTypesArray": [
