--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -95,6 +95,10 @@
     {
       "name": "Contact",
       "path": "/contact"
+    },
+    {
+      "name": "Confidentialité",
+      "path": "/privacy-policy"
     }
   ],
   "publicationTypesArray": [
